# lidar_camera_calibrator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  package.xml
data/data-hitsz/: config.json
data/data-hitsz/pointcloud/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  plane0.pcd  plane1.pcd  plane2.pcd  plane3.pcd  plane4.pcd  plane5.pcd  plane6.pcd  plane7.pcd
data/data-sim/: config.json
data/data-sim/pointcloud/: 0.pcd  1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd  plane0.pcd  plane1.pcd  plane2.pcd  plane3.pcd  plane4.pcd  plane5.pcd  plane6.pcd  plane7.pcd  plane8.pcd  plane9.pcd
docker/: Dockerfile  Dockerfile_calibrator  entrypoint.sh
include/get_sync_data/: get_sync_data.cpp  get_sync_data.h
launch/: calibrate.launch  get_sync_data.launch
src/: get_sync_data_node.cpp
src/calibrator/: CMakeLists.txt  cqtopencvviewergl.cpp  cqtopencvviewergl.h  data_reader.cpp  data_reader.h  image_polygon.cpp  image_polygon.h  imageviewer.cpp  imageviewer.h  imageviewer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointcloud_polygon.cpp  pointcloud_polygon.h  pointcloudviewer.cpp  pointcloudviewer.h  pointcloudviewer.ui  single_tagtest.h  utils.h
src/calibrator/core/: PCFeatureExtra.hpp  SolvePnP.hpp
